--- a/templates/index.html
+++ b/templates/index.html
@@ -138,6 +138,11 @@
       }
     });
   </script>
+<footer>
+  <a href="/datenschutz.html" target="_blank">Datenschutz</a> | 
+  <a href="/impressum.html" target="_blank">Impressum</a> | 
+  <a href="/nutzungshinweis.html" target="_blank">Nutzungshinweis</a>
+</footer>
 
 </body>
 </html>
